// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`http normal 1`] = `
[
  [
    {
      "data": null,
      "files": undefined,
      "headers": {
        "accept": "application/json",
      },
      "method": "GET",
      "query": undefined,
      "url": "/foo",
    },
    {
      "baseURL": "",
      "fetcher": [MockFunction] {
        "calls": [Circular],
        "results": [
          {
            "type": "return",
            "value": {
              "isTest": true,
            },
          },
        ],
      },
      "middleware": [],
      "withCredentials": false,
    },
  ],
]
`;

exports[`parseRequestArgs & creator 1`] = `
{
  "args": [
    "a",
    "b",
  ],
  "metadata": {
    "params": {
      "bar": "baz",
    },
  },
  "trigger": {
    "method": "GET",
    "path": "/foo/:bar",
  },
}
`;

exports[`parseRequestArgs & creator 2`] = `
{
  "data": {
    "args": [
      "a",
      "b",
    ],
  },
  "files": undefined,
  "headers": {
    "accept": "application/json",
  },
  "method": "GET",
  "query": undefined,
  "url": "/foo/baz",
}
`;

exports[`parseRequestArgs & creator 3`] = `
{
  "args": [],
  "metadata": null,
  "trigger": {
    "method": "GET",
    "path": "/foo",
  },
}
`;

exports[`parseRequestArgs & creator 4`] = `
{
  "data": null,
  "files": undefined,
  "headers": {
    "accept": "application/json",
  },
  "method": "GET",
  "query": undefined,
  "url": "/foo",
}
`;

exports[`parseRequestArgs & creator 5`] = `
{
  "args": [],
  "metadata": null,
  "trigger": {
    "method": "ALL",
    "path": "/foo",
  },
}
`;

exports[`parseRequestArgs & creator 6`] = `
{
  "data": null,
  "files": undefined,
  "headers": {
    "accept": "application/json",
  },
  "method": "GET",
  "query": undefined,
  "url": "/foo",
}
`;

exports[`parseRequestArgs & creator 7`] = `
{
  "args": [
    "a",
    "b",
  ],
  "metadata": null,
  "trigger": {
    "method": "ALL",
    "path": "/foo",
  },
}
`;

exports[`parseRequestArgs & creator 8`] = `
{
  "data": {
    "args": [
      "a",
      "b",
    ],
  },
  "files": undefined,
  "headers": {
    "accept": "application/json",
  },
  "method": "POST",
  "query": undefined,
  "url": "/foo",
}
`;
